# DriveLang

./: .gitignore  Cargo.toml  GUIDE.md  README.md  input.drive  input.edt  input2.drive
.github/workflows/: release.yml
docs/: Lexer.md  Parser.md  engine.md  intro.md  io.md  pipeline.md  primitives.md
examples/: audio.drive  basic_filters.drive  batch_loop.drive  conditionals.drive  full_pipeline.drive  grayscale.drive  hello.drive  intro.drive  kernels.drive  masked_filters.drive
src/: cli.rs  engine.rs  filter.rs  lexer.rs  lib.rs  main.rs  parser.rs  range.rs
src/io/: io.rs  mod.rs  video_io.rs
src/media/: frame.rs  track.rs  video.rs
src/pipeline/: gaussian_blur.rs  mod.rs  pipeline.rs
stdlib/: color.drive  color.edt  core.drive  core.edt  effects.edt  image.edt  mask.edt  vision.edt
